Added Project 2 in home page

--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
 				</div>
 			</div>
 		</a>
+		<a href="https://tusharkesarwani.github.io/Product_Launching_Website/Tushar%20Kesarwani/" target="_blank">
+			<div class="card bg-dark text-white" id="pro2" style="background-color: #07192f; margin: 0px; padding: 0px">
+				<img src="image/Project 2.png" class="card-img" alt="project image" />
+				<div class="card-img-overlay">
+					<h5 class="card-title fs-3">Project 2</h5>
+				</div>
+			</div>
+		</a>
 		<section id="connect" style="text-align: center; color: aqua; background-color: #00081d; margin: 0px; padding: 40px; font-style: italic; font-family: cursive; font-display: inherit">
 			<h3 style="margin: 10px">Connect with Me</h3>
 			<div class="social fs-1">
