--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<a class="nav-link active" aria-current="page" href="#skills">Skills</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#pro1">Projects</a>
+								<a class="nav-link active" aria-current="page" href="#project">Projects</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link active" aria-current="page" href="#connect">Connect</a>
@@ -49,22 +49,42 @@
 			<h3 style="text-align: center">Skills</h3>
 			<p style="background-color: #07192f; margin: 0px; padding: 0px">Java || C++ || C || Python || HTML || CSS || JavaScript || Web Development || Bootstrap || Competitive Programming || Problem Solving || Data Structures || Algorithms || Object-Oriented Programming || CSS Flexbox || Git || GitHub</p>
 		</section>
-		<a href="https://TusharKesarwani.github.io/Calculator" target="_blank">
-			<div class="card bg-dark text-white" id="pro1" style="background-color: #07192f; margin: 0px; padding: 0px">
-				<img src="image/calculator.png" class="card-img" alt="project image" />
-				<div class="card-img-overlay">
-					<h5 class="card-title fs-3">Project 1</h5>
+		<section id="project">
+			<div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
+				<div class="carousel-indicators">
+				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
 				</div>
-			</div>
-		</a>
-		<a href="https://tusharkesarwani.github.io/Product_Launching_Website/Tushar%20Kesarwani/" target="_blank">
-			<div class="card bg-dark text-white" id="pro2" style="background-color: #07192f; margin: 0px; padding: 0px">
-				<img src="image/Project 2.png" class="card-img" alt="project image" />
-				<div class="card-img-overlay">
-					<h5 class="card-title fs-3">Project 2</h5>
+				<div class="carousel-inner">
+				<div class="carousel-item active">
+					<a href="https://TusharKesarwani.github.io/Calculator" target="_blank">
+						<img src="image/calculator.png" class="d-block w-100" alt="Project image">
+						<div class="carousel-caption d-none d-md-block">
+						<h5>Project 1</h5>
+						<p>Click Here</p>
+						</div>
+					</a>
 				</div>
+				<div class="carousel-item">
+					<img src="image/Project 2.png" class="d-block w-100" alt="Project image">
+						<a href="https://tusharkesarwani.github.io/Product_Launching_Website/Tushar%20Kesarwani/" target="_blank">
+							<div class="carousel-caption d-none d-md-block">
+							<h5>Project 2</h5>
+							<p>Click Here</p>
+							</div>
+						</a>
+				</div>
+				</div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+				</button>
 			</div>
-		</a>
+		</section>
 		<section id="connect" style="text-align: center; color: aqua; background-color: #00081d; margin: 0px; padding: 40px; font-style: italic; font-family: cursive; font-display: inherit">
 			<h3 style="margin: 10px">Connect with Me</h3>
 			<div class="social fs-1">
