--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
 				<div class="carousel-indicators">
 				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-current="true" aria-label="Slide 3"></button>
 				</div>
 				<div class="carousel-inner">
 				<div class="carousel-item active">
 					<a href="https://TusharKesarwani.github.io/Calculator" target="_blank">
-						<img src="image/calculator.png" class="d-block w-100" alt="Project image">
+						<img src="image/Project 1.png" class="d-block w-100" alt="Project image">
 						<div class="carousel-caption d-none d-md-block">
 						<h5>Project 1</h5>
 						<p>Click Here</p>
@@ -70,6 +71,15 @@
 						<a href="https://tusharkesarwani.github.io/Product_Launching_Website/Tushar%20Kesarwani/" target="_blank">
 							<div class="carousel-caption d-none d-md-block">
 							<h5>Project 2</h5>
+							<p>Click Here</p>
+							</div>
+						</a>
+				</div>
+				<div class="carousel-item">
+					<img src="image/Project 3.png" class="d-block w-100" alt="Project image">
+						<a href="https://tusharkesarwani.github.io/Solution-Challenge/" target="_blank">
+							<div class="carousel-caption d-none d-md-block">
+							<h5>Project 3</h5>
 							<p>Click Here</p>
 							</div>
 						</a>
