Changed link of Project 2

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				</div>
 				<div class="carousel-item">
 					<img src="image/Project 2.png" class="d-block w-100" alt="Project image">
-						<a href="https://tusharkesarwani.github.io/Product_Launching_Website/Tushar%20Kesarwani/" target="_blank">
+						<a href="https://tusharkesarwani.github.io/Product_Launching_Website/" target="_blank">
 							<div class="carousel-caption d-none d-md-block">
 							<h5>Project 2</h5>
 							<p>Click Here</p>
