Edited Linkedin id link in the teams section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		<section id="connect" style="text-align: center; color: aqua; background-color: #00081d; margin: 0px; padding: 40px; font-style: italic; font-family: cursive; font-display: inherit">
 			<h3 style="margin: 10px">Connect with Me</h3>
 			<div class="social fs-1">
-				<a href="https://linkedin.com/in/tusharkesarwani44" target="_blank">
+				<a href="https://linkedin.com/in/tushar104" target="_blank">
 					<i class="fa-brands fa-linkedin"></i>
 				</a>
 				<a href="https://www.facebook.com/tusharkesarwani44" target="_blank">
