--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<a href="https://www.facebook.com/tusharkesarwani44" target="_blank">
 					<i class="fa-brands fa-facebook"></i>
 				</a>
-				<a href="https://instagram.com/tusharkesarwani44" target="_blank">
+				<a href="https://instagram.com/tushar_.104" target="_blank">
 					<i class="fa-brands fa-instagram"></i>
 				</a>
 				<a href="https://twitter.com/tushar_104" target="_blank">
